#2 Adding about me on website in second day

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Project</title>
-    <link rel="stylesheet" href="CSS/main.css" />
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         </div>
         <div class="col-4">
             <h2>Sen Kunthy</h2>
-            <p id="p">I am developer <br>First, solve the prolem. <br>Then, write the code</p>
+            <p id="p">I am developer first solve the prolem, <br>Then write the code</p>
             <button id="info">More Info</button>
         </div>
         <div class="col-3">
@@ -30,9 +30,13 @@
     <footer>
         <div class="container-1">
             <div class="col-1">
-                <p>You are enjoying my content,
-                    <br>please contact me by calling +885|6371527</p>
-                <button>Next</button>
+                <div class="social-media">
+                    <p id="social_txt">Conect with us <br> on social media</p>
+                    <a href="https://web.facebook.com/?_rdc=1&_rdr"><img src="images/facebook.png" class="social"></a>
+                    <a href="https://www.instagram.com/accounts/login/"><img src="images/instagram.jpg" class="social"></a>
+                    <a href="https://web.telegram.org/#/login"><img src="images/telegram.jpg" class="social"></a>
+                    <a href="https://ads.twitter.com/login"><img src="images/twitter.png" class="social"></a>
+                </div>
             </div>
             <div class="col-2">
                 <a href="#">Site link</a><br>
@@ -42,7 +46,7 @@
                 <a href="#">Resume</a>
             </div>
             <div class="col-3">
-                <a href="#">Pupular</a><br>
+                <a href="#">Popular</a><br>
                 <a href="#">Github</a>
             </div>
         </div>
