#3 adding contact page on website

--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 
-<body>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="pages/about.html">About Me</a></li>
-        <li><a href="pages/contact.html">Contact</a></li>
-        <li><a href="pages/cv.html">CV</a> </li>
+<body> 
+    <div class="menu">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="pages/about.html">About Me</a></li>
+            <li><a href="pages/contact.html">Contact</a></li>
+            <li><a href="pages/cv.html">CV</a> </li>
 
-    </ul>
+        </ul>
+    </div>
     <div class="container">
         <div class="col-1">
         </div>
