--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,7 +15,53 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a href="cv.html">CV</a></li>
     </ul>
-    <h1>Hello this is contact pages</h1>
+    <h1 class="contact">CONTACT</h1>
+    <div class="container">
+        <p id="cell">Cell: 097373-3833</p><br>
+        <p id="email">Email: kunthy.sen778@gmail.com</p><br>
+        <div class="map">
+            <div class="card">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3909.0139081695015!2d104.88308360000003!3d11.550859800000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x310951add5e2cd81%3A0x171e0b69c7c6f7ba!2sPasserelles+num%C3%A9riques+Cambodia+(PNC)!5e0!3m2!1sen!2skh!4v1554366688167!5m2!1sen!2skh"
+                    width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <button>PNC Map</button>
+            </div>
+        </div>
+        <div class="form">
+            <div class="card">
+                <form>
+                    <input type="text" placeholder="Username"><br>
+                    <input type="email" placeholder="Email"><br>
+                    <input type="text" placeholder="Phone"><br>
+                    <textarea></textarea>
+                    <button>Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    <footer id="footer">
+        <div class="container-1">
+            <div class="col-1">
+                <div class="social-media">
+                    <p id="social_txt">Conect with us <br> on social media</p>
+                    <a href="https://web.facebook.com/?_rdc=1&_rdr"><img src="../images/facebook.png" class="social"></a>
+                    <a href="https://www.instagram.com/accounts/login/"><img src="../images/instagram.jpg" class="social"></a>
+                    <a href="https://web.telegram.org/#/login"><img src="../images/telegram.jpg" class="social"></a>
+                    <a href="https://ads.twitter.com/login"><img src="../images/twitter.png" class="social"></a>
+                </div>
+            </div>
+            <div class="col-2">
+                <a href="#">Site link</a><br>
+                <a href="#">Education</a><br>
+                <a href="#">Experience</a><br>
+                <a href="#">Contact</a><br>
+                <a href="#">Resume</a>
+            </div>
+            <div class="col-3">
+                <a href="#">Popular</a><br>
+                <a href="#">Github</a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
